olympus/ollama/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.ramoneees.com`)
      kind: Rule
      services:
        - name: ollama
          port: 11434
  tls:
    secretName: wildcard-ramoneees-com-tls
